# 2B-OCR-Recognition-System

./: .gitignore  Launch2B.ps1  README.md  Run2BCli.ps1  Run2BComprehensive.ps1  启动2B_Qt界面.bat  运行2B_CLI测试.bat  运行2B_综合检测Demo.bat
03_结果表格/: 2B原始16张OCR识别结果.csv  2B完整OCR识别结果_26张.csv  2B完整OCR识别结果_26张.xlsx  2B补充10张OCR识别结果.csv
04_运行日志/: 2B原始16张测试日志.txt  2B补充10张测试日志.txt
05_项目报告/: 2B_OCR文字识别系统完成报告.md
06_源代码/: export_csv_to_xlsx.py  generate_comprehensive_samples.py  generate_more_ocr_tests.py  generate_ocr_samples.py
06_源代码/cpp/: CMakeLists.txt
06_源代码/cpp/include/: ocr_core.hpp
06_源代码/cpp/src/: cli_main.cpp  comprehensive_demo.cpp  ocr_core.cpp  qt_main.cpp
06_源代码/cpp/tests/: test_core.cpp
06_源代码/python/: ocr_reader.py
07_综合检测Demo/: 综合检测运行日志.txt
07_综合检测Demo/03_综合检测结果表格/: 综合检测结果.csv  综合检测结果.xlsx
